fixing spacing for callout

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -115,7 +115,8 @@ h1 {
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     border-left: 5px solid #af3800;
-    margin: 20px 0;
+    margin-top: 0;
+    margin-bottom: 20px;
     padding: 15px;
     padding-bottom: 0;
 }
